--- a/src/components/Header/Header.styl
+++ b/src/components/Header/Header.styl
@@ -13,6 +13,8 @@
 		padding 40px 0
 		background linear-gradient(to top, #252525 0%, #647786 100%)
 		box-shadow inset 0 1px 1px #838fbb, 0 4px 0 rgba(0, 0, 0, 0.75)
+		border-left 2px solid #111013
+		border-right 2px solid #111013
 		cursor pointer
 		&:after
 			content ""
@@ -39,5 +41,3 @@
 		font-size 80px
 		font-weight bold
 		text-transform uppercase
-			
-					
