--- a/src/components/Thumbler/Thumbler.styl
+++ b/src/components/Thumbler/Thumbler.styl
@@ -1,4 +1,5 @@
 .thumbler
+	padding-top 65px
 	&:after
 	&:before
 		content ""
@@ -7,3 +8,44 @@
 		clear both
 	&__info
 		float left
+		margin-right 80px
+	&__title
+		margin-bottom 25px
+		color #4fa6ff
+		font-size 53px
+		font-weight 500
+		text-transform uppercase
+	&__desc
+		color #81808a
+		font-size 53px
+	&__box
+		overflow hidden
+		max-width 50%
+		box-shadow inset 0 1px 5px rgba(0, 0, 0, 0.58)
+		border-radius 10px
+		background-color #17161a
+		:after
+		&:before
+			content ""
+			display table
+		&:after
+			clear both
+	&__switcher
+		float left
+		width 50%
+		span
+			display block
+			padding 30px 0
+			text-align center
+			text-shadow 0 -2px 0 rgba(0, 21, 42, 0.51)
+			color #81808a
+			font-size 80px
+			font-weight 500
+		input
+			display none
+			&:checked
+				& + span
+					border-radius 8px
+					background linear-gradient(to top, #002850 0%, #0291ff 92%, #0075cf 92%, #0291ff 100%)
+					color #c9e1f4
+					text-shadow 0 -2px 0 rgba(0, 21, 42, 0.51)
