--- a/src/components/Header/Header.styl
+++ b/src/components/Header/Header.styl
@@ -10,12 +10,34 @@
 		float left
 		height 200px
 		text-align center
-		padding 40px 0
 		background linear-gradient(to top, #252525 0%, #647786 100%)
 		box-shadow inset 0 1px 1px #838fbb, 0 4px 0 rgba(0, 0, 0, 0.75)
 		border-left 2px solid #111013
 		border-right 2px solid #111013
 		cursor pointer
+		@media (min-width: 1800px) and (max-width: 2200px)
+			height 150px
+			img
+				width 60px
+		@media (min-width: 1200px) and (max-width: 1799px)
+			height 120px
+			img
+				width 40px
+		@media (min-width: 1000px) and (max-width: 1199px)
+				height 100px
+				img
+					width 40px
+		@media (min-width: 768px) and (max-width: 999px)
+				height 80px
+				img
+					width 30px
+		@media (max-width: 767px)
+			height 40px
+			border-left 1px solid #111013
+			border-right 1px solid #111013
+			img
+				width 20px
+			
 		&:after
 			content ""
 			display inline-block
@@ -41,3 +63,18 @@
 		font-size 80px
 		font-weight bold
 		text-transform uppercase
+		@media (min-width: 1800px) and (max-width: 2200px)
+			padding 20px 0
+			font-size 45px
+		@media (min-width: 1200px) and (max-width: 1799px)
+			padding 20px 0
+			font-size 40px
+		@media (min-width: 1000px) and (max-width: 1199px)
+			padding 20px
+			font-size 30px
+		@media (min-width: 768px) and (max-width: 999px)
+			padding 20px
+			font-size 25px
+		@media (max-width: 767px)
+			font-size 20px
+			padding 15px 0
