--- a/src/components/Picker/Picker.styl
+++ b/src/components/Picker/Picker.styl
@@ -1,5 +1,15 @@
 .picker
 	margin-bottom 90px
+	@media (min-width: 1800px) and (max-width: 2200px)
+		margin-bottom 45px
+	@media (min-width: 1200px) and (max-width: 1799px)
+		margin-bottom 30px
+	@media (min-width: 1000px) and (max-width: 1199px)
+		margin-bottom 30px
+	@media (min-width: 768px) and (max-width: 999px)
+		margin-bottom 30px
+	@media (max-width: 767px)
+		margin-bottom 20px
 	&__title
 		margin-top 0
 		margin-bottom 60px
@@ -7,6 +17,21 @@
 		font-size 53px
 		font-weight 500
 		text-transform uppercase
+		@media (min-width: 1800px) and (max-width: 2200px)
+			font-size 40px
+			margin-bottom 40px
+		@media (min-width: 1200px) and (max-width: 1799px)
+			font-size 30px
+			margin-bottom 30px
+		@media (min-width: 1000px) and (max-width: 1199px)
+			font-size 20px
+			margin-bottom 20px
+		@media (min-width: 768px) and (max-width: 999px)
+			font-size 20px
+			margin-bottom 20px
+		@media (max-width: 767px)
+			font-size 18px
+			margin-bottom 20px
 	&__list
 		display flex
 		flex-direction row
@@ -16,6 +41,15 @@
 		background-color #17161a
 		border-radius 20px
 		box-shadow inset 0 1px 5px rgba(0, 0, 0, 0.58)
+		@media (min-width: 1200px) and (max-width: 1799px)
+			padding 0 20px
+		@media (min-width: 768px) and (max-width: 999px)
+			padding 0 20px
+		@media (max-width: 767px)
+			display block
+			padding 20px 0
+			max-width 500px
+			margin 0 auto 15px
 	&__item
 		display inline-block
 		text-shadow 0 -2px 0 rgba(0, 0, 0, 0.81)
@@ -23,6 +57,17 @@
 		font-size 53px
 		font-weight 500
 		text-transform uppercase
+		@media (min-width: 1800px) and (max-width: 2200px)
+			font-size 40px
+		@media (min-width: 1200px) and (max-width: 1799px)
+			font-size 25px
+		@media (min-width: 1000px) and (max-width: 1199px)
+			font-size 20px
+		@media (min-width: 768px) and (max-width: 999px)
+			font-size 18px
+		@media (max-width: 767px)
+			display block
+			font-size 16px
 		input
 			display none
 			&:checked
@@ -32,6 +77,18 @@
 					background linear-gradient(to top, #01274d 0%, #002850 24%, #0085eb 100%)
 					border-radius 20px
 					box-shadow inset 0 1px 1px #a6e1ff
+					@media (max-width: 767px)
+						transform scale(1.1)
 		span
 			display inline-block
 			padding 30px
+			@media (min-width: 1200px) and (max-width: 1799px)
+				padding 15px
+			@media (min-width: 1000px) and (max-width: 1199px)
+				padding 15px
+			@media (min-width: 768px) and (max-width: 999px)
+				padding 15px
+			@media (max-width: 767px)
+				padding 10px
+				display block
+				text-align center
