--- a/src/components/Thumbler/Thumbler.styl
+++ b/src/components/Thumbler/Thumbler.styl
@@ -1,5 +1,13 @@
 .thumbler
 	padding-top 65px
+	@media (min-width: 1800px) and (max-width: 2200px)
+		padding-top 45px
+	@media (min-width: 1200px) and (max-width: 1799px)
+		padding-top 35px
+	@media (min-width: 768px) and (max-width: 999px)
+		padding-top 30px
+	@media (max-width: 767px)
+		padding-top 30px
 	&:after
 	&:before
 		content ""
@@ -9,15 +17,47 @@
 	&__info
 		float left
 		margin-right 80px
+		@media (min-width: 1200px) and (max-width: 1799px)
+			margin-right 30px
+		@media (min-width: 1000px) and (max-width: 1199px)
+			margin-right 20px
+		@media (min-width: 768px) and (max-width: 999px)
+			margin-right 20px
+		@media (max-width: 767px)
+			margin-right 20px
 	&__title
 		margin-bottom 25px
 		color #4fa6ff
 		font-size 53px
 		font-weight 500
 		text-transform uppercase
+		@media (min-width: 1800px) and (max-width: 2200px)
+			font-size 40px
+		@media (min-width: 1200px) and (max-width: 1799px)
+			font-size 25px
+			margin-bottom 15px
+		@media (min-width: 1000px) and (max-width: 1199px)
+			font-size 20px
+			margin-bottom 15px
+		@media (min-width: 768px) and (max-width: 999px)
+			font-size 18px
+			margin-bottom 15px
+		@media (max-width: 767px)
+			font-size 16px
+			margin-bottom 15px
 	&__desc
 		color #81808a
 		font-size 53px
+		@media (min-width: 1800px) and (max-width: 2200px)
+			font-size 40px
+		@media (min-width: 1200px) and (max-width: 1799px)
+			font-size 25px
+		@media (min-width: 1000px) and (max-width: 1199px)
+			font-size 20px
+		@media (min-width: 768px) and (max-width: 999px)
+			font-size 18px
+		@media (max-width: 767px)
+			font-size 16px
 	&__box
 		overflow hidden
 		max-width 50%
@@ -41,6 +81,20 @@
 			color #81808a
 			font-size 80px
 			font-weight 500
+			@media (min-width: 1800px) and (max-width: 2200px)
+				font-size 50px
+			@media (min-width: 1200px) and (max-width: 1799px)
+				font-size 30px
+				padding 20px
+			@media (min-width: 1000px) and (max-width: 1199px)
+				font-size 20px
+				padding 20px
+			@media (min-width: 768px) and (max-width: 999px)
+				font-size 18px
+				padding 20px
+			@media (max-width: 767px)
+				font-size 16px
+				padding 15px
 		input
 			display none
 			&:checked
