--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,4 +1,24 @@
 mainFont = sans-serif
+lgWidth = 1500px
+mdWidth = 1300px
+smWidth = 1000px
+
+tabletWidth = 768px
+tabletHeight = tabletWidth
+phoneHeight = 380px
+
+lg = "(min-width: " + (lgWidth) + ")"
+md = "(min-width: " + mdWidth + ") and (max-width: " + (lgWidth - 1) + ")"
+sm = "(min-width: " + smWidth + ") and (max-width: " + (mdWidth - 1) + ")"
+
+desktop = "(min-width: " + smWidth + ")"
+tablet = "(min-width: " + tabletWidth + ") and (max-width: " + (smWidth - 1) + ")"
+tablet_landscape = "(max-height: " + (tabletHeight) + ") and (max-width: " + (mdWidth - 1) + ")"
+phone = "(max-width: " + (tabletWidth - 1) + ")"
+phone_landscape = "(max-height: " + (phoneHeight - 1) + ")"
+phone_tablet = "(max-width: " + (smWidth - 1) + ")"
+
+
 *
 	font-smoothing antialiased
 	box-sizing border-box
